# AdventOfCode

./: Cargo.toml  template
2023/: day2.py  day5.py  day6.py  day8.py  day9.py
2024/: day1.py  day2.py  day3.py  day4.py  day5.py
_python/y2023/: day1.py  day3.py  day4.py
_python/y2024/: day1.py  day2.py  day3.py  day5.py
src/: args.rs  main.rs
src/y2015/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
src/y2025/: day1.rs  day10.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
