[package]
name = "AdventOfCode"
version = "0.1.0"
edition = "2021"

[features]
default = []
today = []

[dependencies]
regex = "1"
pico-args = "0.5"
hex-literal = "1.1.0"
md5 = "0.8.0"
rayon = "1.11.0"
petgraph = "0.8.3"
serde_json = "1.0.145"
itertools = "0.14.0"
z3 = "0.12"

[profile.release]
opt-level = 3
lto = true
